test/language/errors/errors_get.hm
# string index: expected integer but was boolean
# string index out of bounds: 10 > 3
# string index out of bounds: -1
# indexing error: expected array, table, or string but was boolean

use "errors"

let foo = "bar"

try { foo[true] } except e { echo runtime(e) }
try { foo[10] } except e { echo runtime(e) }
try { foo[-4] } except e { echo runtime(e) }

try { true[1] } except e { echo runtime(e) }
